# test_meson

./: .gitignore  .mesonpy-native-file.ini  .pre-commit-config.yaml  LICENSE  README.md  dev.py  environment.yaml  meson.build  pyproject.toml  setup.py
test_meson/: cmain.pyx  main.py  meson.build
test_meson/lib1/: __init__.pxd  __init__.py  meson.build  module.pxd  module.pyx  test_mod1.pxd  test_mod1.pyx
test_meson/lib2/: __init__.py  meson.build  module.pyx  test_mod2.pyx
