[build-system]
build-backend = "mesonpy"
requires = ["cython >= 3.0", "numpy", "meson-python", "ninja >= 1.8.2", "setuptools"]
# setuptools added untill meson-python-v0.13 comes to release version

[project]
name = "test-meson"
description = "Test for Meson with Cython"
version = "0.1"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
  { name = "Koyo Munechika", email = "munechika.koyo@torus.nr.titech.ac.jp" },
]
maintainers = [
  { name = "Koyo Munechika", email = "munechika.koyo@torus.nr.titech.ac.jp" },
]
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
docs = [
  "docutils >= 0.19, < 0.20",
  "ipykernel",
  "ipywidgets",
  "nbsphinx",
  "pillow",
  "pygments >= 2.11.0",
  "sphinx >= 7, < 8",
  "sphinx-prompt",
  "sphinx-copybutton",
  "pydata-sphinx-theme < 0.11",
  "sphinx-design",
  "pandoc",
  "sphinx-codeautolink",
]
dev = [
  "build",
  "ipython",
  "black",
  "ruff",
  "mypy",
  "rich-click",
  "cython-lint",
  "pre-commit",
  "cython >= 3.0",
  "setuptools",  # added to allow in-place install
]

[project.urls]
repository = "https://github.com/munechika-koyo/test_meson"


[tool.black]
line-length = 100

[tool.cython-lint]
max-line-length = 100

[tool.ruff]
line-length = 100

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I", "N", "B", "NPY"]
ignore = ["E501", "N802", "N803", "N806"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["E", "F", "W", "I", "B", "NPY"]
unfixable = ["E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10
target-version = "py310"

[tool.mypy]
follow-imports = "silent"
ignore-missing-imports = true
show-column-numbers = true
no-pretty = true
